--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,11 @@ label {
     float: right;
 }
 
+input[type="file"] {
+    max-width: 200px;
+    overflow: auto;
+}
+
 .hidden {
     display: none !important;
 }
